# PyPolSAR

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
docker/: README.md
pypolsar/: __init__.py  __main__.py
pypolsar/filters/: spatial.py
pypolsar/geo/: __init__.py  geo.py
pypolsar/io/: __init__.py
pypolsar/io/project/: __init__.py  project.py
pypolsar/io/rat/: __init__.py  geo_rat.py  ste_io.py
pypolsar/opertaions/: __init__.py  operation.py
pypolsar/plot/: __init__.py  dem.py  map.py  permasar.py
pypolsar/polsar/: __init__.py  processor.py
pypolsar/polsar/decomposition/: __init__.py  eigen.py  operators.py
pypolsar/polsar/decomposition/src/: aghababaee_decomposition.c  arii_anned_3components_decomposition.c  arii_nned_3components_decomposition.c  barnes1_decomposition.c  barnes2_decomposition.c  bhattacharya_frery_4components_decomposition.c  cameron_decomposition.c  cloude_decomposition.c  compact_decomposition.c  freeman_2components_decomposition.c  h_a_alpha_decomposition.c  haalpha_decomposition.c  holm1_decomposition.c  holm2_decomposition.c  huynen_decomposition.c  krogager_decomposition.c  mcsm_5components_decomposition.c  neumann_decomposition.c  raney_decomposition.c  singh_4components_decomposition.c  sub_aperture_decomposition.c  tsvm_decomposition.c  unified_huynen_decomposition.c  vanzyl92_3components_decomposition.c  xu_jin_decomposition.c  yamaguchi_3components_decomposition.c
pypolsar/polsar/filters/: __init__.py  additive_noise.py
pypolsar/polsar/parameters/: __init__.py  ent_ans_alpha.py  ratios.py
pypolsar/stats/: __init__.py  timer.py
pypolsar/testing/: __init__.py  utils.py
pypolsar/utils/: __init__.py  plot.py  plot_polsar.py
tests/: test_backends.py
tests/test_example/: test_hello.py
tests/test_io/: test_rat.py
