# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pypolsar"
version = "2.0.4"
description = "PyPolSAR is a python module for Polarimetric Synthetic Aperture Radar (PolSAR) data processing."
readme = "README.md"
authors = [
  "Earth-Observation <is3mansour@gmail.com>"
]
license = "GPL-3.0-or-later"
repository = "https://github.com/IslamAlam/pypolsar"
homepage = "https://github.com/IslamAlam/pypolsar"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = ['pypolsar', 'gdal', 'numpy', 'xarray']  # Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  # Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.3',
  'Programming Language :: Python :: 3.4',
  'Programming Language :: Python :: 3.5',
  'Programming Language :: Python :: 3.6',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"pypolsar" = "pypolsar.__main__:app"

[tool.poetry.dependencies]
python = "^3.7"
importlib_metadata = {version = "^1.6.0", python = "<3.8"}
typer = {extras = ["all"], version = "^0.2.1"}
rich = "^2.2.2"
pre-commit = "^2.5.1"
numba = "^0.51.2"
numpy = "^1.19.2"
scipy = "^1.5.2"
h5py = "^2.10.0"
cython = "^0.29.21"
matplotlib = "^3.3.2"
scikit-image = "^0.17.2"
readline = "^6.2.4"
mako = "^1.1.3"
pillow = "^7.2.0"
xarray = "^0.16.0"
seaborn = "^0.11.0"

[tool.poetry.dev-dependencies]
darglint = "^1.4.1"
isort = {extras = ["pyproject"], version = "^4.3.21"}
pyupgrade = "^2.6.1"
black = "^19.10b0"
mypy = "^0.780"
bandit = "^1.6.2"
safety = "^1.9.0"
pytest = "^5.4.3"
pylint = "^2.5.3"
pydocstyle = "^5.0.2"
coverage = "^5.3"

[tool.black]
# https://github.com/psf/black
line-length = 80
target-version = ["py37"]

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 80
